--- a/src/main/webapp/athome/src/app/sl/sl.component.html
+++ b/src/main/webapp/athome/src/app/sl/sl.component.html
@@ -1,3 +1,5 @@
-<div class="col s12">
-  <router-outlet></router-outlet>
+<div class="col s12 ">
+  <div class="col s12 white">
+    <router-outlet></router-outlet>
+  </div>
 </div>
