change dashboard styling

--- a/src/main/webapp/athome/src/app/alarm/details/alarm-group.details.component.html
+++ b/src/main/webapp/athome/src/app/alarm/details/alarm-group.details.component.html
@@ -1,15 +1,17 @@
-<div class="col s12">
+<div class="col s12 top-padding">
   <div class="col s12">
-    <div class="col s6"><label>Name</label></div>
+    <div class="col s6"><span class="semi-bold">Name</span></div>
     <div class="col s6">{{ alarmGroup.name }}</div>
   </div>
   <div class="col s12">
-    <div class="col s6">Fired</div>
+    <div class="col s6"><span class="semi-bold">Fired</span></div>
     <div class="col s6">{{ alarmGroup.fired }}</div>
   </div>
   <div class="col s12">
     <div class="col s6">
+      <span class="semi-bold">
       Enabled
+      </span>
     </div>
     <div class="col s6">
       <div class="actions">
