--- a/src/main/webapp/athome/src/assets/styles/_custom.scss
+++ b/src/main/webapp/athome/src/assets/styles/_custom.scss
@@ -59,3 +59,13 @@
 i.x-small {
   font-size: 1.5rem;
 }
+
+
+.top-padding {
+  padding-top: 1rem !important;
+}
+
+
+.semi-bold {
+  font-weight: 500;
+}
