--- a/src/main/webapp/athome/src/app/zwave/configuration/zwave.ha.sensors.configuration.component.html
+++ b/src/main/webapp/athome/src/app/zwave/configuration/zwave.ha.sensors.configuration.component.html
@@ -2,7 +2,9 @@
   <div class="no-padding-top">
     <div class="row">
       <div class="col s12">
-        <h5>{{title}}</h5>
+        <div class="col s12">
+          <h5>{{title}}</h5>
+        </div>
         <ul class="collection">
           <li class="collection-item" *ngFor="let sensor of sensors">
             <div class="valign-wrapper">
