--- a/src/main/webapp/athome/src/app/zwave/configuration/zwave.sensor.configuration.component.html
+++ b/src/main/webapp/athome/src/app/zwave/configuration/zwave.sensor.configuration.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="no-padding-top">
     <div class="row">
-      <h4>{{title}}</h4>
+      <div class="col s12">
+        <h5>{{title}}</h5>
+      </div>
       <div class="row">
         <div class="col s12">
           <div class="valign-wrapper">
